<resources>
    <string name="up_av_label_name" translatable="false">Antivirus</string>
    <string name="account_type">com.unplugged.android.account</string>
    <string name="account_type_old">com.unplugged.account</string>
    <string name="up_av_app_copyright" translatable="false">Copyright 2017-2021 Divested Computing Group</string>
    <string name="up_av_app_license" translatable="false">License: GPL-3.0</string>
    <string name="up_av_app_version" translatable="false">Version: %s</string>
    <string name="up_av_app_db_type_clamav" translatable="false">Powered by ClamAV style signatures</string>
    <string name="up_av_lblOnionRoutingToggle" translatable="false">Download over Tor</string>
    <string name="up_av_lblOnionRoutingEnabledHint" translatable="false">Downloading over Tor, this may take a while…</string>
    <string name="up_av_lblOnionRoutingNotInstalled" translatable="false">Orbot is not installed!</string>
    <string name="up_av_lblOnionRoutingNotRunning" translatable="false">Orbot is not running!</string>
    <string name="up_av_lblUpdateDatabase" translatable="false">Update databases</string>
    <string name="up_av_lblSelectDatabases" translatable="false">Select databases</string>
    <string name="up_av_lblSelectDatabasesTitle" translatable="false">Select databases to enable</string>
    <string name="up_av_lblFullCredits" translatable="false">Credits</string>
    <string name="up_av_lblScanSystem" translatable="false">Scan /system</string>
    <string name="up_av_lblScanApps" translatable="false">Scan App APKs</string>
    <string name="up_av_lblScanInternal" translatable="false">Scan Internal Storage</string>
    <string name="up_av_lblScanExternal" translatable="false">Scan External Storage</string>
    <string name="up_av_lblNotificationMalwareDetectionTitle" translatable="false">Malware Detection</string>
    <string name="up_av_lblNotificationMalwareDetectionDescription" translatable="false">Used to alert when malware is detected</string>
    <string name="up_av_lblNotificationRealtimeTitle" translatable="false">Realtime Scanner</string>
    <string name="up_av_lblNotificationRealtimeDescription" translatable="false">Used to show files scanned counter and maintain the background service</string>
    <string name="up_av_lblNotificationRealtimeText" translatable="false">Known malware will be detected in realtime</string>
    <string name="up_av_lblNotificationRealtimeStopped" translatable="false">Hypatia: Realtime Scanning Stopped</string>
    <string name="up_av_lblNotificationRealtimeDetection" translatable="false">Malware Detected:</string>
    <string name="up_av_lblRealtimeScannerToggle" translatable="false">Realtime Scanner</string>
    <string name="up_av_main_database_updating" translatable="false">Updating %s databases…</string>
    <string name="up_av_main_database_downloading" translatable="false">Downloading %s</string>
    <string name="up_av_main_database_download_success" translatable="false">Successfully downloaded</string>
    <string name="up_av_main_database_download_error" translatable="false">File not downloaded, response code %s</string>
    <string name="up_av_main_no_database_available" translatable="false">No database available, stopping scan…</string>
    <string name="up_av_main_database_released_on" translatable="false">Released on %s</string>
    <string name="up_av_main_database_not_changed" translatable="false">File not changed</string>
    <string name="up_av_main_database_not_modified_since" translatable="false">since %s</string>
    <string name="up_av_main_database_download_error_logcat" translatable="false">Failed to download, check logcat</string>
    <string name="up_av_main_starting_scan" translatable="false">Starting scan…</string>
    <string name="up_av_main_cancelling_scan" translatable="false">Cancelling scan…</string>
    <string name="up_av_main_cancelled_scan" translatable="false">Cancelled scan</string>
    <string name="up_av_main_files_pending_scan" translatable="false">%s files pending scan</string>
    <string name="up_av_main_database_loading" translatable="false">Loading database…</string>
    <string name="up_av_main_database_loaded" translatable="false">Loaded database with %s signatures</string>
    <string name="up_av_main_hashing_files" translatable="false">Hashing files…</string>
    <string name="up_av_main_hashing_done" translatable="false">Calculated hashes for all files</string>
    <string name="up_av_main_hash_scan_done" translatable="false">Checked all %s hashes against signature databases</string>
    <string name="up_av_main_no_hashes_available" translatable="false">No %s hashes signatures available</string>
    <string name="up_av_main_scanning_done" translatable="false">Scan completed in %s seconds @ %sMB/s!</string>
    <string name="up_av_main_files_scanned_count" translatable="false">%s files scanned</string>
    <string name="up_av_db_desc_author" translatable="false">Author</string>
    <string name="up_av_db_desc_license" translatable="false">License</string>
    <string name="up_av_db_desc_size" translatable="false">Size</string>
    <string name="up_av_db_desc_source" translatable="false">Source</string>
    <string name="up_av_db_desc_size_small" translatable="false">Small</string>
    <string name="up_av_db_desc_size_medium" translatable="false">Medium</string>
    <string name="up_av_db_desc_size_large" translatable="false">Large</string>
    <string name="up_av_status_screen_title" translatable="false">Recent Scan</string>
    <string name="up_av_last_scan_title" translatable="false">SCAN RESULTS</string>
    <string name="up_av_start_scan_button" translatable="false">Start Scan</string>
    <string name="up_av_new_scan" translatable="false">New Scan</string>
    <string name="up_av_scanning_title" translatable="false">Scanning...</string>
    <string name="up_av_scan_results" translatable="false">Scan Results</string>
    <string name="up_av_remove_all" translatable="false">REMOVE ALL MALWARE</string>
    <string name="up_av_initializing_title" translatable="false">Initializing...</string>
    <string name="up_av_finished_title" translatable="false">Finished</string>
    <string name="up_av_no_malware_found" translatable="false">No malware or viruses found</string>
    <string name="up_av_ok" translatable="false">OK</string>
    <string name="up_av_show_scan_history" translatable="false">Scan History</string>
    <string name="up_av_completed_scan_title" translatable="false">COMPLETED SCAN</string>
    <string name="up_av_threats_found" translatable="false">Malware Found: %1$d\nTrackers Found: %2$d</string>
    <string name="up_av_inspect_pi_history" translatable="false">Scan History</string>
    <string name="up_av_app_description" translatable="false">The Antivirus is an essential part of Unplugged’s total privacy system.\n\nHackers exploit compromised files, images and cookies you may download to plant agents and malware enabling them to gain access to your device.\n\nThe Antivirus scans you device for viruses, malware and trackers. Unplugged’s security experts and third-party security professionals recommend running antivirus scans at least once a week</string>
    <string name="up_av_file_manager_permission_title" translatable="false">File Manager</string>
    <string name="up_av_file_manager_permission_body" translatable="false">Please allow the Antivirus application access to all files on the device. This is how we thoroughly examine the full system</string>
    <string name="up_av_full_scan_title" translatable="false">Full Scan</string>
    <string name="up_av_on_boarding_message_up_app_missing" translatable="false">You are missing the UP Store application, please install it and finish registration / login process and then come back to continue.\nYou can click the button below to download the UP Store application from unplugged.com website</string>
    <string name="up_av_on_boarding_button_download" translatable="false">Download UP Store</string>
    <string name="up_av_on_boarding_message_subscription_invalid" translatable="false">Seems like you are not logged-in with UP Store application or your subscription is expired.\nPlease click the button below to open the UP Store application</string>
    <string name="up_av_on_boarding_button_open_up_store" translatable="false">Open UP Store</string>
    <string name="up_av_on_boarding_message_unknown_reason" translatable="false">Looks like some unknown error happened, please try to re-open the Antivirus application.\n\nIf the issue still happens contact us at support@unplugged.com</string>
    <string name="up_av_on_boarding_message_first_start" translatable="false">Thank you for joining the Unplugged family, where your privacy is our first priority</string>
    <string name="up_av_on_boarding_button_close" translatable="false">Close</string>
    <string name="up_av_get_started" translatable="false">Get Started</string>
    <string name="up_av_welcome_to_unplugged" translatable="false">Welcome to Unplugged Antivirus</string>
    <string name="up_av_subscription_expired" translatable="false">Subscription Expired</string>
    <string name="up_av_subscription_expired_message" translatable="false">Unfortunately your subscription period is expired, you will be navigated to subscription page and would be able to renew it</string>
    <string name="up_av_scan_limit_reached" translatable="false">Monthly Antivirus scans Limit Reached</string>
    <string name="up_av_scan_limit_reached_message" translatable="false">You\'ve used all the free Antivirus scans included in your plan. Upgrade to Premium subscription via the UP Store to enjoy an unlimited Antivirus scans</string>
    <string name="up_av_scan_canceled_title" translatable="false">Scan is canceled</string>
    <string name="up_av_scan_canceled_message" translatable="false">Click OK to close the scan screen</string>
    <string name="up_av_cancel" translatable="false">Cancel</string>
    <string name="up_av_unknown_error" translatable="false">Unexpected Error</string>
    <string name="up_av_cancel_unknown_reason" translatable="false">Unfortunately the scan was canceled for unexpected reason, please try again later</string>
    <string name="up_av_session_revoke_title" translatable="false">Session Revoked</string>
    <string name="up_av_session_revoke_message" translatable="false">Seems like this session revoked, please restart application or make sure you are logged in at UP Store app</string>
    <string name="up_av_subscription_not_found" translatable="false">Subscription Not Found</string>
    <string name="up_av_full_scan" translatable="false">Full Scan</string>
    <string name="up_av_select_scan_preferences" translatable="false">Select scan preferences</string>
    <string name="up_av_quick_scan" translatable="false">Quick Scan</string>
    <string name="up_av_close" translatable="false">Close</string>
    <string name="up_av_empty_scan_history_message" translatable="false">No scan history found, perform scanning first</string>
    <string name="up_av_about" translatable="false">About</string>
    <string name="up_av_loading_message" translatable="false">Initial setup is in progress\n The first-time load may take \na bit longer.\n\nGetting things ready to protect your device</string>
    <string name="up_av_you_are_protected" translatable="false">You are protected</string>
    <string name="up_av_there_are_no_previous_scans" translatable="false">There are no previous scans</string>
    <string name="up_av_information_about_malware_and_trackers" translatable="false">Information about Malware and Trackers</string>
    <string name="up_av_learn_more" translatable="false">Learn More</string>
    <string name="shield_logo">Shield logo</string>
</resources>