<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/up_background_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:fontFamily="@font/satoshi_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/up_av_inspect_pi_history" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/info_button"
            app:layout_constraintTop_toTopOf="@id/info_button"
            app:layout_constraintEnd_toStartOf="@id/info_button"
            android:layout_marginEnd="4dp"
            android:paddingVertical="0dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:lineHeight="0dp"
            android:lineSpacingExtra="0dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/satoshi_medium"
            android:gravity="bottom"
            android:text="@string/up_av_learn_more"
            android:textSize="12dp"
            android:textColor="#3D96B8"/>
        <ImageView
            android:id="@+id/info_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_info_tooltip"
            android:contentDescription="@string/up_av_information_about_malware_and_trackers" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_wrapper">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scan_history_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/history_item" />

        <TextView
            android:id="@+id/no_history_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white_70"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:fontFamily="@font/satoshi_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/up_av_empty_scan_history_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/rounded_white_shape"
            android:fontFamily="@font/satoshi_bold"
            android:textAllCaps="false"
            android:textColor="@color/transparent"
            android:textSize="16dp"
            android:letterSpacing="0"
            android:text="@string/up_av_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>